--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -6,3 +6,8 @@ sky:
     database: sky_take_out
     username: root
     password: 123456
+  alioss:
+    endpoint: oss-cn-beijing.aliyuncs.com
+    bucket-name: xyh6666
+    access-key-id: LTAI5tMgrsFF8ohey8vfrbAr
+    access-key-secret: ILiumZ4pP0pDUCTQS4cKVuJluVEzUd
