商品浏览业务相关代码开发

--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -6,3 +6,16 @@ sky:
     database: sky_take_out
     username: root
     password: 123456
+
+  alioss:
+    endpoint: oss-cn-beijing.aliyuncs.com
+    bucket-name: xyh6666
+    access-key-id: LTAI5tMgrsFF8ohey8vfrbAr
+    access-key-secret: ILiumZ4pP0pDUCTQS4cKVuJluVEzUd
+  redis:
+    host: localhost
+    port: 6379
+    database: 10
+  wechat:
+    appid: wx44acacedf1df3d5a
+    secret: 731061fcec8534b5af75a4ea449674ab
